Removed the glossaries

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside, openright]{RequiredFiles/NorthumbriaPhdThesis}
+\documentclass[openright]{RequiredFiles/NorthumbriaPhdThesis}
 
 %%%
 % Meta Data (Used on Title Pages)
@@ -31,4 +31,4 @@
 %%%
 \input{BackMatter/BackMatter.tex}
 
-\end{document}
+\end{document} 
