Added the abbreviations and symbols

--- a/FrontMatter/FrontMatter.tex
+++ b/FrontMatter/FrontMatter.tex
@@ -1,16 +1,17 @@
-
-
 %Abstract
 \input{FrontMatter/Sections/abstract.tex}
 
 %Contents
 \input{FrontMatter/Sections/contents.tex}
 
+%Abbreviations
+\input{FrontMatter/Sections/abbreviations.tex}
+
 %Preface
-\input{FrontMatter/Sections/preface.tex}
+\input{FrontMatter/Sections/symbols.tex}
 
 %Acknowledgements
 \input{FrontMatter/Sections/acknowledgements.tex}
 
 %Declaration
-\input{FrontMatter/Sections/declaration.tex}
+\input{FrontMatter/Sections/declaration.tex} 
